linked to prisma and finnished posts

--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "clsx": "^2.1.0",
     "framer-motion": "^10.17.12",
     "next": "14.0.4",
+    "postinstall": "^0.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.0",
@@ -25,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.8.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
