--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
