--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.7",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.17.12",
     "lucide": "^0.378.0",
-    "lucide-react": "^0.378.0",
+    "lucide-react": "^0.383.0",
     "next": "14.0.4",
     "postinstall": "^0.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.0",
     "react-intersection-observer": "^9.5.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
