--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^10.17.12",
     "lucide": "^0.378.0",
     "lucide-react": "^0.383.0",
+    "nanoid": "^5.0.7",
     "next": "14.0.4",
+    "next-auth": "^4.24.7",
     "postinstall": "^0.9.0",
     "react": "^18",
     "react-dom": "^18",
